Remove unused classes from category divs in main category section in index.html

--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
             <p>Pick a category</p>
         </div>
         <!-- Chooses the quiz catagories -->
-        <div id="categorySports" class="center-all pointer grid-even category-grid-item2" aria-label="Play our sports quiz">
+        <div id="categorySports" class="center-all pointer grid-even" aria-label="Play our sports quiz">
             <i class="fas fa-dumbbell"></i>
             <p>Sports</p>
         </div>
 
-        <div id="categoryScience" class="center-all pointer grid-odd category-grid-item3" aria-label="Play our science quiz">
+        <div id="categoryScience" class="center-all pointer grid-odd" aria-label="Play our science quiz">
             <i class="fas fa-atom"></i>
             <p>Science</p>
         </div>
@@ -62,17 +62,17 @@
             <p>Film</p>
         </div>
 
-        <div id="categoryHistory" class="center-all pointer grid-odd category-grid-item5" aria-label="Play our history quiz">
+        <div id="categoryHistory" class="center-all pointer grid-odd" aria-label="Play our history quiz">
             <i class="fab fa-fort-awesome"></i>
             <p>History</p>
         </div>
 
-        <div id="categoryMusic" class="center-all pointer grid-even category-grid-item6" aria-label="Play our music quiz">
+        <div id="categoryMusic" class="center-all pointer grid-even" aria-label="Play our music quiz">
             <i class="fas fa-music"></i>
             <p>Music</p>
         </div>
 
-        <div id="categoryGeography" class="center-all pointer grid-odd category-grid-item7" aria-label="Play our geography quiz">
+        <div id="categoryGeography" class="center-all pointer grid-odd" aria-label="Play our geography quiz">
             <i class="fas fa-globe-europe"></i>
             <p>Geography</p>
         </div>
